[package]
name = "websocket-server-async"
version = "0.2.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/websocket-server-async"
documentation = "https://docs.rs/websocket-server-async"
description = "rust websocket server tokio frame."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
aqueue="1.2"
anyhow = "1"
tokio-tungstenite ={ version="0.17"}
futures-util = { version = "0.3", default-features = false, features = ["sink","std"] }
log = "0.4"
async-trait="0.1"

[dev-dependencies]
env_logger = "0.9"